--- a/FabricsWebApplication/Views/Create/CreateFabricsRoll.cshtml
+++ b/FabricsWebApplication/Views/Create/CreateFabricsRoll.cshtml
@@ -15,22 +15,22 @@
         <form  class="form-horizontal" role="form">
               <div class="form-group">
                 <label class="col-sm-3">PurchaseInvoiceId:</label>
-                <div class="col-sm-9">
-                    @Html.DropDownListFor(m => m.PurchaseInvoiceId,(IEnumerable<SelectListItem>)ViewData["purchaseInvoiceId"])
+                <div class="col-sm-3">
+                    @Html.DropDownListFor(m => m.PurchaseInvoiceId, (IEnumerable<SelectListItem>)ViewData["purchaseInvoiceId"], new { @class = "form-control"})
                 </div>
               </div>
                <br />
               <div class="form-group">
                 <label class="col-sm-3" >FabricsColorName:</label>
-                <div class="col-sm-9">
-                     @Html.DropDownListFor(m => m.FabricsColorId,(IEnumerable<SelectListItem>)ViewData["fabricsColorId"])
+                <div class="col-sm-3">
+                     @Html.DropDownListFor(m => m.FabricsColorId,(IEnumerable<SelectListItem>)ViewData["fabricsColorId"], new { @class = "form-control"})
                 </div>
               </div>
                <br />
               <div class="form-group">
                 <label class="col-sm-3" >FabricsPlotsId:</label>
-                <div class="col-sm-9">
-                     @Html.DropDownListFor(m => m.PlotsId,(IEnumerable<SelectListItem>)ViewData["fabricsPlotsId"])
+                <div class="col-sm-3">
+                     @Html.DropDownListFor(m => m.PlotsId,(IEnumerable<SelectListItem>)ViewData["fabricsPlotsId"], new { @class = "form-control"})
                 </div>
               </div>
                <br />
