--- a/FabricsWebApplication/Views/Add/AddDelivery.cshtml
+++ b/FabricsWebApplication/Views/Add/AddDelivery.cshtml
@@ -15,15 +15,15 @@
         <form  class="form-horizontal" role="form">
               <div class="form-group">
                 <label class="col-sm-3">ShipperId:</label>
-                <div class="col-sm-9">
-                   @Html.DropDownListFor(m => m.ShipperId,(IEnumerable<SelectListItem>)ViewData["ShipperId"])
+                <div class="col-sm-3">
+                   @Html.DropDownListFor(m => m.ShipperId,(IEnumerable<SelectListItem>)ViewData["ShipperId"], new { @class = "form-control"})
                 </div>
               </div>
                <br />
               <div class="form-group">
                 <label class="col-sm-3">SalesInvoiceId:</label>
-                <div class="col-sm-9">
-                    @Html.DropDownList("salesInvoiceId",(IEnumerable<SelectListItem>)ViewData["SalesInvoiceId"])
+                <div class="col-sm-3">
+                    @Html.DropDownList("salesInvoiceId",(IEnumerable<SelectListItem>)ViewData["SalesInvoiceId"], new { @class = "form-control"})
                 </div>
               </div>
                <br />
